# ticketland-signdrop

./: .gitignore  Cargo.toml  LICENSE  README.md
operations/: Dockerfile
scripts/: airdrop.sh  test-validator.sh
src/: airdroper.rs  config.rs  lib.rs  main.rs  model.rs
wallet-dev/: payer.json
