[package]
name = "ticketland-signdrop"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqp-helpers = { git = "https://github.com/ticketland-io/amqp-helpers", version = "0.1.4" }
borsh = "0.9.3"
solana-sdk = "1.11.4"
solana-client = "1.11.4"
lapin = "2.1.1"
tokio = { version = "1.14.1", features = ["rt", "macros"] }
